# Aegis-Chain

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/bussines/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
